--- a/.github/workflows/NoFree.yml
+++ b/.github/workflows/NoFree.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Check issue actor
         uses: fluttercandies/no-free-usage-action@v1.0.1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}  # 由GitHub提供的临时Token，必须在此处进行传递，且必须为这个值。
+          token: ${{ secrets.ACTION_TOKEN }}  # 由GitHub提供的临时Token，必须在此处进行传递，且必须为这个值。
           forked: '--no-forked'
           words:  To support our project, please file the issue after you starred the repo. Thanks! 🙂 作者：xuexiangjys https://www.bilibili.com/read/cv9190554/ 出处：bilibili
