--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -39,6 +39,6 @@ jobs:
       env:
         APP_STORE_CONNECT_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
         APP_STORE_CONNECT_KEY_CONTENT: ${{ secrets.APP_STORE_CONNECT_KEY_CONTENT }}
-        BARK_KEY: ${{ secrets.BARK_KEY }}
+        BARK_KEY: ${{ secrets.PAW_KEY }}
         MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }}
         MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
