--- a/AlarmPaw.xcodeproj/xcshareddata/xcschemes/NotificationServiceExtension.xcscheme
+++ b/AlarmPaw.xcodeproj/xcshareddata/xcschemes/NotificationServiceExtension.xcscheme
@@ -2,7 +2,7 @@
 <Scheme
    LastUpgradeVersion = "1510"
    wasCreatedForAppExtension = "YES"
-   version = "2.0">
+   version = "2.2">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -34,6 +34,15 @@
                BlueprintName = "AlarmPaw"
                ReferencedContainer = "container:AlarmPaw.xcodeproj">
             </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <AutocreatedTestPlanReference>
+            </AutocreatedTestPlanReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
