--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Select Xcode Version
       uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0-beta'
+        xcode-version: '15.2.0'
 
     - name: Setup ruby
       uses: ruby/setup-ruby@v1
