--- a/AlarmPaw.xcodeproj/xcshareddata/xcschemes/AlarmPaw.xcscheme
+++ b/AlarmPaw.xcodeproj/xcshareddata/xcschemes/AlarmPaw.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "194CA2222B6771E10033B602"
+               BuildableName = "AlarmPawUITests.xctest"
+               BlueprintName = "AlarmPawUITests"
+               ReferencedContainer = "container:AlarmPaw.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
