--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+**/node_modules/
+
+**/.DS_Store
