--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Adding README - Chinese Traditional
         uses: dephraiim/translate-readme@main
         with:
-          LANG: zh-TW
+          LANG: en
       - name: Adding README - Hindi
         uses: dephraiim/translate-readme@main
         with:
@@ -35,3 +35,4 @@ jobs:
         uses: dephraiim/translate-readme@main
         with:
           LANG: fr
+        
