--- a/AlarmPaw/Info.plist
+++ b/AlarmPaw/Info.plist
@@ -15,6 +15,8 @@
 		<string>INSendMessageIntent</string>
 		<string>INStartCallIntent</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>保存消息图片到相册</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
