--- a/AlarmPaw/Info.plist
+++ b/AlarmPaw/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>扫描二维码</string>
 	<key>GitHub Run Id</key>
 	<string>0</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
