--- a/AlarmPaw/Info.plist
+++ b/AlarmPaw/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>paw</string>
+				<string>alarmpaw</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.twown.paw</string>
+		</dict>
+	</array>
 	<key>UIApplicationShortcutItems</key>
 	<array/>
 	<key>NSCameraUsageDescription</key>
