--- a/AlarmPaw.xcodeproj/xcshareddata/xcschemes/AlarmPaw.xcscheme
+++ b/AlarmPaw.xcodeproj/xcshareddata/xcschemes/AlarmPaw.xcscheme
@@ -62,6 +62,13 @@
             ReferencedContainer = "container:AlarmPaw.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "IDEPreferLogStreaming"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
